# ocamlc-3

./: .gitignore  ISA.md  Makefile  README.md  assembler.asm  dune  dune-project  input.asm  lexer.ml  lexer.mli  ocamlc3.ml  ocamlc3.opam  parser.ml
.github/workflows/: workflow.yml
src/: assembler.ml  dune  lexer.ml  lexer.mli  ocamlc3.ml  parser.ml  parser.mli
tests/: assembler.asm  input.asm
workflows/: workflow.yml
